--- a/Article/SearchArticle/.classpath
+++ b/Article/SearchArticle/.classpath
@@ -3,5 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="lib" path="E:/github/KnowledgableArticle/Article/SearchArticle/lib/lucene-core-3.6.1.jar"/>
+	<classpathentry kind="lib" path="lib/simhash-0.1beta.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
