--- a/Article/FilteringArticle/wechat/file/configuration.ini
+++ b/Article/FilteringArticle/wechat/file/configuration.ini
@@ -4,3 +4,14 @@ WORD2VEC = E:/file/knowledge/tools/vectors.txt
 [synonymys]
 QUERY = E:/file/knowledge/synonymys/query
 SYNONYMY = E:/file/knowledge/synonymys/synonymy
+
+[bows]
+BOW = E:/file/knowledge/qa/fashion/bagofword
+WORD = E:/file/knowledge/qa/fashion/wordbag
+
+[corpus]
+ARTICLE = E:/file/knowledge/qa/fashion/article_top
+SPLIT = E:/file/knowledge/qa/fashion/split_top
+
+[corpora]
+DICTIONARY = E:/file/knowledge/corpora/dictionary.txt
