--- a/Article/FilteringArticle/wechat/file/configuration.ini
+++ b/Article/FilteringArticle/wechat/file/configuration.ini
@@ -14,4 +14,6 @@ ARTICLE = E:/file/knowledge/qa/fashion/article_top
 SPLIT = E:/file/knowledge/qa/fashion/split_top
 
 [corpora]
-DICTIONARY = E:/file/knowledge/corpora/dictionary.txt
+DICTIONARY = E:/file/knowledge/corpora/debug/dictionary.txt
+MMCORPUS = E:/file/knowledge/corpora/debug/mmcorpus.txt
+TFIDF = E:/file/knowledge/corpora/debug/tfidf.txt
