--- a/Article/FilteringArticle/wechat/file/configuration.ini
+++ b/Article/FilteringArticle/wechat/file/configuration.ini
@@ -1,5 +1,5 @@
 [tools]
-WORD2VEC = E:/file/knowledge/tools/vectors.txt
+WORD2VEC = E:/file/knowledge/tools/word2vector/fashion_vectors.txt
 
 [synonymys]
 QUERY = E:/file/knowledge/synonymys/query
@@ -12,8 +12,10 @@ WORD = E:/file/knowledge/qa/fashion/wordbag
 [corpus]
 ARTICLE = E:/file/knowledge/qa/fashion/article_top
 SPLIT = E:/file/knowledge/qa/fashion/split_top
+SENTENCE = E:/file/knowledge/qa/fashion/sentence_top
 
 [corpora]
-DICTIONARY = E:/file/knowledge/corpora/debug/dictionary.txt
-MMCORPUS = E:/file/knowledge/corpora/debug/mmcorpus.txt
-TFIDF = E:/file/knowledge/corpora/debug/tfidf.txt
+DICTIONARY = E:/file/knowledge/corpora/run/fashion/dictionary.txt
+MMCORPUS = E:/file/knowledge/corpora/run/fashion/mmcorpus.txt
+TFIDF = E:/file/knowledge/corpora/run/fashion/tfidf.txt
+WORD2TFIDF = E:/file/knowledge/corpora/run/fashion/word2tfidf.txt
