--- a/Article/FilteringArticle/wechat/file/configuration.ini
+++ b/Article/FilteringArticle/wechat/file/configuration.ini
@@ -8,6 +8,7 @@ SYNONYMY = E:/file/knowledge/synonymys/synonymy
 [bows]
 BOW = E:/file/knowledge/qa/fashion/bagofword
 WORD = E:/file/knowledge/qa/fashion/wordbag
+IDF = E:/file/knowledge/qa/fashion/idf
 
 [corpus]
 ARTICLE = E:/file/knowledge/qa/fashion/article_top
@@ -15,8 +16,8 @@ SPLIT = E:/file/knowledge/qa/fashion/split_top
 SENTENCE = E:/file/knowledge/qa/fashion/sentence_top
 
 [corpora]
-DICTIONARY = E:/file/knowledge/corpora/run/fashion/dictionary.txt
-MMCORPUS = E:/file/knowledge/corpora/run/fashion/mmcorpus.txt
-TFIDF = E:/file/knowledge/corpora/run/fashion/tfidf.txt
-WORD2TFIDF = E:/file/knowledge/corpora/run/fashion/word2tfidf.txt
-WORD2VEC = E:/file/knowledge/corpora/run/fashion/word2vec.txt
+DICTIONARY = E:/file/knowledge/corpora/debug/fashion/dictionary.txt
+MMCORPUS = E:/file/knowledge/corpora/debug/fashion/mmcorpus.txt
+TFIDF = E:/file/knowledge/corpora/debug/fashion/tfidf.txt
+WORD2TFIDF = E:/file/knowledge/corpora/debug/fashion/word2tfidf.txt
+WORD2VEC = E:/file/knowledge/corpora/debug/fashion/word2vec.txt
