--- a/Article/FilteringArticle/wechat/file/configuration.ini
+++ b/Article/FilteringArticle/wechat/file/configuration.ini
@@ -14,6 +14,9 @@ IDF = E:/file/knowledge/qa/fashion/idf
 ARTICLE = E:/file/knowledge/qa/fashion/article_top
 SPLIT = E:/file/knowledge/qa/fashion/split_top
 SENTENCE = E:/file/knowledge/qa/fashion/sentence_top
+SUBTITLE = E:/file/knowledge/qa/fashion/sub_title
+KEYWORD = E:/file/knowledge/qa/fashion/keyword_top
+SIMPLYARTICLE = E:/file/knowledge/qa/fashion/simply_article
 
 [corpora]
 DICTIONARY = E:/file/knowledge/corpora/debug/fashion/dictionary.txt
