--- a/Article/FilteringArticle/wechat/file/configuration.ini
+++ b/Article/FilteringArticle/wechat/file/configuration.ini
@@ -1,6 +1,3 @@
-[tools]
-WORD2VEC = E:/file/knowledge/corpora/run/fashion/word2vec.txt
-
 [synonymys]
 QUERY = E:/file/knowledge/synonymys/query
 SYNONYMY = E:/file/knowledge/synonymys/synonymy
@@ -24,3 +21,6 @@ MMCORPUS = E:/file/knowledge/corpora/debug/fashion/mmcorpus.txt
 TFIDF = E:/file/knowledge/corpora/debug/fashion/tfidf.txt
 WORD2TFIDF = E:/file/knowledge/corpora/debug/fashion/word2tfidf.txt
 WORD2VEC = E:/file/knowledge/corpora/debug/fashion/word2vec.txt
+
+[tools]
+TITLESPST = E:/file/knowledge/tools/titlespst
