--- a/Article/FilteringArticle/wechat/file/configuration.ini
+++ b/Article/FilteringArticle/wechat/file/configuration.ini
@@ -14,12 +14,14 @@ SENTENCE = E:/file/knowledge/qa/fashion/sentence_top
 SUBTITLE = E:/file/knowledge/qa/fashion/sub_title
 KEYWORD = E:/file/knowledge/qa/fashion/keyword_top
 SIMPLYARTICLE = E:/file/knowledge/qa/fashion/simply_article
+UNIQUEARTICLE = E:/file/knowledge/qa/fashion/unique_article
+LUCENE = E:/file/knowledge/lucene/output/5/queryresult
 
 [corpora]
-DICTIONARY = E:/file/knowledge/corpora/debug/fashion/dictionary.txt
-MMCORPUS = E:/file/knowledge/corpora/debug/fashion/mmcorpus.txt
-TFIDF = E:/file/knowledge/corpora/debug/fashion/tfidf.txt
-WORD2TFIDF = E:/file/knowledge/corpora/debug/fashion/word2tfidf.txt
+DICTIONARY = E:/file/knowledge/corpora/run/fashion/dictionary.txt
+MMCORPUS = E:/file/knowledge/corpora/run/fashion/mmcorpus.txt
+TFIDF = E:/file/knowledge/corpora/run/fashion/tfidf.txt
+WORD2TFIDF = E:/file/knowledge/corpora/run/fashion/word2tfidf.txt
 WORD2VEC = E:/file/knowledge/corpora/run/fashion/word2vec.txt
 
 [tools]
