--- a/Article/FilteringArticle/wechat/file/configuration.ini
+++ b/Article/FilteringArticle/wechat/file/configuration.ini
@@ -16,6 +16,7 @@ KEYWORD = E:/file/knowledge/qa/fashion/keyword_top
 SIMPLYARTICLE = E:/file/knowledge/qa/fashion/simply_article
 UNIQUEARTICLE = E:/file/knowledge/qa/fashion/unique_article
 LUCENE = E:/file/knowledge/lucene/output/5/queryresult
+KNOWLEDGE = E:/file/knowledge/classify/fashion/2015/knowledgeable_article
 
 [corpora]
 DICTIONARY = E:/file/knowledge/corpora/run/fashion/dictionary.txt
