--- a/Article/FilteringArticle/wechat/file/configuration.ini
+++ b/Article/FilteringArticle/wechat/file/configuration.ini
@@ -8,8 +8,9 @@ WORD = E:/file/knowledge/qa/fashion/wordbag
 IDF = E:/file/knowledge/qa/fashion/idf
 
 [corpus]
-ARTICLE = E:/file/knowledge/qa/fashion/article_top
-SPLIT = E:/file/knowledge/qa/fashion/split_top
+ARTICLE = E:/file/knowledge/classify/finance/knowledgeable_article_random
+SPLIT = E:/file/knowledge/classify/finance/split
+FEATURE = E:/file/knowledge/classify/finance/feature_list
 SENTENCE = E:/file/knowledge/qa/fashion/sentence_top
 SUBTITLE = E:/file/knowledge/qa/fashion/sub_title
 KEYWORD = E:/file/knowledge/qa/fashion/keyword_top
@@ -27,3 +28,6 @@ WORD2VEC = E:/file/knowledge/corpora/run/fashion/word2vec.txt
 
 [tools]
 TITLESPST = E:/file/knowledge/tools/titlespst
+FIRSTPRO = E:/file/knowledge/tools/firstperson
+SECONDPRO = E:/file/knowledge/tools/secondperson
+THIRDPRO = E:/file/knowledge/tools/thirdperson
