--- a/Article/FilteringArticle/wechat/file/configuration.ini
+++ b/Article/FilteringArticle/wechat/file/configuration.ini
@@ -3,31 +3,39 @@ QUERY = E:/file/knowledge/synonymys/query
 SYNONYMY = E:/file/knowledge/synonymys/synonymy
 
 [bows]
-BOW = E:/file/knowledge/qa/fashion/bagofword
-WORD = E:/file/knowledge/qa/fashion/wordbag
-IDF = E:/file/knowledge/qa/fashion/idf
+BOW = E:/data/knowledge/qa/fashion/bagofword
+WORD = E:/data/knowledge/qa/fashion/wordbag
+IDF = E:/data/knowledge/qa/fashion/idf
 
 [corpus]
-ARTICLE = E:/file/knowledge/classify/finance/knowledgeable_article_random
-SPLIT = E:/file/knowledge/classify/finance/split
-FEATURE = E:/file/knowledge/classify/finance/feature_list
-SENTENCE = E:/file/knowledge/qa/fashion/sentence_top
-SUBTITLE = E:/file/knowledge/qa/fashion/sub_title
-KEYWORD = E:/file/knowledge/qa/fashion/keyword_top
-SIMPLYARTICLE = E:/file/knowledge/qa/fashion/simply_article
-UNIQUEARTICLE = E:/file/knowledge/qa/fashion/unique_article
-LUCENE = E:/file/knowledge/lucene/output/5/queryresult
-KNOWLEDGE = E:/file/knowledge/classify/fashion/2015/knowledgeable_article
+ARTICLE = E:/data/knowledge/classify/finance/knowledgeable_article
+SPLIT = E:/data/knowledge/classify/finance/split
+FEATURE = E:/data/knowledge/classify/web/feature_set
+SENTENCE = E:/data/knowledge/qa/fashion/sentence_top
+SUBTITLE = E:/data/knowledge/qa/fashion/sub_title
+KEYWORD = E:/data/knowledge/qa/fashion/keyword_top
+SIMPLYARTICLE = E:/data/knowledge/qa/fashion/simply_article
+UNIQUEARTICLE = E:/data/knowledge/qa/fashion/unique_article
+LUCENE = E:/data/knowledge/lucene/output/5/queryresult
+KNOWLEDGE = E:/data/knowledge/classify/web/knowledgeable_article_id
+TRAINDATA = E:/data/knowledge/train/finance/traindata
 
 [corpora]
-DICTIONARY = E:/file/knowledge/corpora/run/fashion/dictionary.txt
-MMCORPUS = E:/file/knowledge/corpora/run/fashion/mmcorpus.txt
-TFIDF = E:/file/knowledge/corpora/run/fashion/tfidf.txt
-WORD2TFIDF = E:/file/knowledge/corpora/run/fashion/word2tfidf.txt
-WORD2VEC = E:/file/knowledge/corpora/run/fashion/word2vec.txt
+DICTIONARY = E:/data/knowledge/corpora/run/fashion/dictionary.txt
+MMCORPUS = E:/data/knowledge/corpora/run/fashion/mmcorpus.txt
+TFIDF = E:/data/knowledge/corpora/run/fashion/tfidf.txt
+WORD2TFIDF = E:/data/knowledge/corpora/run/fashion/word2tfidf.txt
+WORD2VEC = E:/data/knowledge/corpora/run/fashion/word2vec.txt
 
 [tools]
-TITLESPST = E:/file/knowledge/tools/titlespst
-FIRSTPRO = E:/file/knowledge/tools/firstperson
-SECONDPRO = E:/file/knowledge/tools/secondperson
-THIRDPRO = E:/file/knowledge/tools/thirdperson
+TITLESPST = E:/data/knowledge/tools/titlespst
+SENTENCEPST = E:/data/knowledge/tools/contentspst
+PUNCTUATION = E:/data/knowledge/tools/punctuation
+FIRSTPRO = E:/data/knowledge/tools/firstperson
+SECONDPRO = E:/data/knowledge/tools/secondperson
+THIRDPRO = E:/data/knowledge/tools/thirdperson
+KNOWLEDGEABLEWORD = E:/data/knowledge/tools/knowledgeableword
+POS = E:/data/knowledge/tools/postag
+
+[classifier]
+CLASSIFIER = E:/data/knowledge/train/finance/classifier/classifier.m
