--- a/Article/FilteringArticle/wechat/file/configuration.ini
+++ b/Article/FilteringArticle/wechat/file/configuration.ini
@@ -8,7 +8,7 @@ WORD = E:/data/knowledge/qa/fashion/wordbag
 IDF = E:/data/knowledge/qa/fashion/idf
 
 [corpus]
-ARTICLE = E:/data/knowledge/classify/finance/knowledgeable_article
+ARTICLE = E:/data/knowledge/qa/fashion/unique_article
 SPLIT = E:/data/knowledge/classify/finance/split
 FEATURE = E:/data/knowledge/classify/web/feature_set
 SENTENCE = E:/data/knowledge/qa/fashion/sentence_top
@@ -36,6 +36,7 @@ SECONDPRO = E:/data/knowledge/tools/secondperson
 THIRDPRO = E:/data/knowledge/tools/thirdperson
 KNOWLEDGEABLEWORD = E:/data/knowledge/tools/knowledgeableword
 POS = E:/data/knowledge/tools/postag
+REDUNDANCE = E:/data/knowledge/tools/content_redundance
 
 [classifier]
 CLASSIFIER = E:/data/knowledge/train/finance/classifier/classifier.m
