--- a/Article/FilteringArticle/wechat/file/configuration.ini
+++ b/Article/FilteringArticle/wechat/file/configuration.ini
@@ -8,8 +8,8 @@ WORD = E:/data/knowledge/qa/fashion/wordbag
 IDF = E:/data/knowledge/qa/fashion/idf
 
 [corpus]
-ARTICLE = E:/data/knowledge/classify/fashion/content_simply_article
-SPLIT = E:/data/knowledge/classify/finance/split
+ARTICLE = E:/data/knowledge/topic_cluster/article_topic_cluster
+SPLIT = E:/data/knowledge/topic_cluster/split
 FEATURE = E:/data/knowledge/classify/web/feature_set
 SENTENCE = E:/data/knowledge/classify/fashion/sub_participle_sentence_top
 SUBTITLE = E:/data/knowledge/qa/fashion/sub_title
@@ -21,11 +21,12 @@ KNOWLEDGE = E:/data/knowledge/classify/web/knowledgeable_article_id
 TRAINDATA = E:/data/knowledge/train/finance/traindata
 
 [corpora]
-DICTIONARY = E:/data/knowledge/corpora/run/fashion/dictionary.txt
-MMCORPUS = E:/data/knowledge/corpora/run/fashion/mmcorpus.txt
-TFIDF = E:/data/knowledge/corpora/run/fashion/tfidf.txt
-WORD2TFIDF = E:/data/knowledge/corpora/run/fashion/word2tfidf.txt
-WORD2VEC = E:/data/knowledge/corpora/run/fashion/word2vec.txt
+DICTIONARY = E:/data/knowledge/corpora/debug/fashion/dictionary.txt
+MMCORPUS = E:/data/knowledge/corpora/debug/fashion/mmcorpus.txt
+TFIDF = E:/data/knowledge/corpora/debug/fashion/tfidf.txt
+WORD2TFIDF = E:/data/knowledge/corpora/debug/fashion/word2tfidf.txt
+WORD2VEC = E:/data/knowledge/corpora/debug/fashion/word2vec.txt
+LDA = E:/data/knowledge/corpora/debug/fashion/lda.txt
 
 [tools]
 TITLESPST = E:/data/knowledge/tools/titlespst
