--- a/Article/FilteringArticle/wechat/file/configuration.ini
+++ b/Article/FilteringArticle/wechat/file/configuration.ini
@@ -8,7 +8,7 @@ WORD = E:/data/knowledge/qa/fashion/wordbag
 IDF = E:/data/knowledge/qa/fashion/idf
 
 [corpus]
-ARTICLE = E:/data/knowledge/classify/fashion/content_simply_article
+ARTICLE = E:/file/knowledge/classify/fashion/content_simply_article
 SPLIT = E:/data/knowledge/classify/fashion/split
 FEATURE = E:/data/knowledge/classify/web/feature_set
 SENTENCE = E:/data/knowledge/classify/fashion/sub_participle_sentence_top
@@ -21,6 +21,7 @@ KNOWLEDGE = E:/data/knowledge/classify/web/knowledgeable_article_id
 TRAINDATA = E:/data/knowledge/train/finance/traindata
 
 [corpora]
+INFO = E:/file/knowledge/corpora/run/fashion/article_info.txt
 DICTIONARY = E:/data/knowledge/corpora/run/fashion/title/dictionary.txt
 MMCORPUS = E:/data/knowledge/corpora/run/fashion/title/mmcorpus.txt
 TFIDF = E:/data/knowledge/corpora/run/fashion/tfidf.txt
