--- a/Article/FilteringArticle/wechat/file/configuration.ini
+++ b/Article/FilteringArticle/wechat/file/configuration.ini
@@ -8,30 +8,32 @@ WORD = E:/data/knowledge/qa/fashion/wordbag
 IDF = E:/data/knowledge/qa/fashion/idf
 
 [corpus]
-ARTICLE = E:/file/knowledge/classify/fashion/content_simply_article
-SPLIT = E:/data/knowledge/classify/fashion/split
+ARTICLE = E:/data/knowledge/classify/fashion/debug/content_simply_article
+SPLIT = E:/data/knowledge/classify/fashion/participle_title
 FEATURE = E:/data/knowledge/classify/web/feature_set
-SENTENCE = E:/data/knowledge/classify/fashion/sub_participle_sentence_top
+SENTENCE = E:/data/knowledge/classify/fashion/debug/segmented_title
 SUBTITLE = E:/data/knowledge/qa/fashion/sub_title
 KEYWORD = E:/data/knowledge/qa/fashion/keyword_top
-SIMPLYARTICLE = E:/data/knowledge/qa/fashion/simply_article
+SIMPLYARTICLE = E:/data/knowledge/classify/fashion/debug/content_simply_article
 UNIQUEARTICLE = E:/data/knowledge/qa/fashion/unique_article
 LUCENE = E:/data/knowledge/lucene/output/fashion/queryresult
 KNOWLEDGE = E:/data/knowledge/classify/web/knowledgeable_article_id
 TRAINDATA = E:/data/knowledge/train/finance/traindata
 
 [corpora]
-INFO = E:/file/knowledge/corpora/run/fashion/article_info.txt
-DICTIONARY = E:/data/knowledge/corpora/run/fashion/title/dictionary.txt
+INFO = E:/data/knowledge/corpora/run/fashion/article_info.txt
+DICTIONARY = E:/data/knowledge/corpora/fashion/debug/dictionary.txt
 MMCORPUS = E:/data/knowledge/corpora/run/fashion/title/mmcorpus.txt
-TFIDF = E:/data/knowledge/corpora/run/fashion/tfidf.txt
+TFIDF = E:/data/knowledge/corpora/debug/fashion/content/tfidf.txt
 WORD2TFIDF = E:/data/knowledge/corpora/run/fashion/word2tfidf.txt
-WORD2VEC = E:/data/knowledge/corpora/run/fashion/word2vec.txt
+WORD2VEC = E:/data/knowledge/corpora/fashion/debug/word2vec.txt
 LDA = E:/data/knowledge/corpora/run/fashion/lda/lda_5topics.txt
+TITLETEXTS = E:/data/knowledge/corpora/run/fashion/title/participle_texts.txt
+CONTENTTEXTS = E:/data/knowledge/corpora/fashion/debug/content/participle_texts.txt
 
 [tools]
 TITLESPST = E:/data/knowledge/tools/titlespst
-SENTENCEPST = E:/data/knowledge/tools/contentspst
+CONTENTSPST = E:/data/knowledge/tools/contentspst
 PUNCTUATION = E:/data/knowledge/tools/punctuation
 FIRSTPRO = E:/data/knowledge/tools/firstperson
 SECONDPRO = E:/data/knowledge/tools/secondperson
