--- a/Article/FilteringArticle/wechat/file/configuration.ini
+++ b/Article/FilteringArticle/wechat/file/configuration.ini
@@ -8,17 +8,19 @@ WORD = E:/data/knowledge/qa/fashion/wordbag
 IDF = E:/data/knowledge/qa/fashion/idf
 
 [corpus]
-ARTICLE = E:/data/knowledge/classify/fashion/debug/title_simply_article
-SPLIT = E:/data/knowledge/classify/fashion/participle_title
-FEATURE = E:/data/knowledge/classify/web/feature_set
-SENTENCE = E:/data/knowledge/topic_cluster/json_sentece
-SUBTITLE = E:/data/knowledge/qa/fashion/sub_title
+ARTICLE = E:/data/knowledge/classify/fashion/debug/knowlegeable_article
+SPLIT = E:/data/knowledge/classify/fashion/debug/participle_title
+FEATURE = E:/data/knowledge/topic_cluster/json_sentence
+SENTENCE = E:/data/knowledge/topic_cluster/json_sentence
+SUBTITLE = E:/data/knowledge/classify/fashion/debug/participle_sentences
 KEYWORD = E:/data/knowledge/qa/fashion/keyword_top
 SIMPLYARTICLE = E:/data/knowledge/classify/fashion/debug/title_simply_article
 UNIQUEARTICLE = E:/data/knowledge/qa/fashion/unique_article
 LUCENE = E:/data/knowledge/lucene/output/fashion/queryresult
 KNOWLEDGE = E:/data/knowledge/classify/web/knowledgeable_article_id
 TRAINDATA = E:/data/knowledge/train/finance/traindata
+SEGTITLE = E:/data/knowledge/classify/fashion/debug/segmented_title
+SEGCONTENT = E:/data/knowledge/classify/fashion/debug/segmented_content
 
 [corpora]
 INFO = E:/data/knowledge/corpora/run/fashion/article_info.txt
@@ -26,7 +28,7 @@ DICTIONARY = E:/data/knowledge/corpora/fashion/debug/dictionary.txt
 MMCORPUS = E:/data/knowledge/corpora/fashion/debug/content/participle_texts.txt
 TFIDF = E:/data/knowledge/corpora/debug/fashion/content/tfidf.txt
 WORD2TFIDF = E:/data/knowledge/corpora/run/fashion/word2tfidf.txt
-WORD2VEC = E:/data/knowledge/corpora/run/fashion/word2vec.txt
+WORD2VEC = E:/data/knowledge/corpora/fashion/debug/word2vec.txt
 LDA = E:/data/knowledge/corpora/run/fashion/lda/lda_5topics.txt
 TITLETEXTS = E:/data/knowledge/corpora/run/fashion/title/participle_texts.txt
 CONTENTTEXTS = E:/data/knowledge/corpora/fashion/debug/content/participle_texts.txt
@@ -49,3 +51,4 @@ CLASSIFIER = E:/data/knowledge/train/finance/classifier/classifier.m
 TESTDATA = E:/data/knowledge/topic_cluster/topic_cluster
 DOCTOPIC = E:/data/knowledge/topic_cluster/article_topic
 TOPICWORD = E:/data/knowledge/topic_cluster/topic_word
+WORDCLUSTER = E:/data/knowledge/topic_cluster/word_embedding_test
