--- a/Article/FilteringArticle/knowledge_tree/file/configuration.ini
+++ b/Article/FilteringArticle/knowledge_tree/file/configuration.ini
@@ -8,7 +8,7 @@ WORD = E:/data/knowledge/qa/fashion/wordbag
 IDF = E:/data/knowledge/qa/fashion/idf
 
 [corpus]
-ARTICLE = E:/data/knowledge/tag/unique_title
+ARTICLE = E:/data/knowledge/tag/knowledge_title
 SPLIT = E:/data/knowledge/appositive/appositive
 FEATURE = E:/data/knowledge/topic_cluster/json_sentence
 SENTENCE = E:/data/knowledge/topic_cluster/json_sentence
@@ -55,4 +55,5 @@ WORDCLUSTER = E:/data/knowledge/topic_cluster/word_embedding_test
 
 [tag]
 TAGTREE = E:/data/knowledge/tag/tag_tree
-ARTICLETAG = E:/data/knowledge/tag/unique_tag
+ARTICLETAG = E:/data/knowledge/tag/knowledge_tag
+SENTENCES = E:/data/knowledge/tag/knowledge_title_market
