--- a/Article/FilteringArticle/knowledge_tree/file/configuration.ini
+++ b/Article/FilteringArticle/knowledge_tree/file/configuration.ini
@@ -29,6 +29,7 @@ MMCORPUS = E:/data/knowledge/corpora/fashion/run/sentences
 TFIDF = E:/data/knowledge/corpora/debug/fashion/content/tfidf.txt
 WORD2TFIDF = E:/data/knowledge/corpora/run/fashion/word2tfidf.txt
 WORD2VEC = E:/data/knowledge/corpora/fashion/run/word2vec
+WORDVECTOR = E:/data/knowledge/corpora/fashion/run/wordvector
 LDA = E:/data/knowledge/corpora/run/fashion/lda/lda_5topics.txt
 TITLETEXTS = E:/data/knowledge/corpora/run/fashion/title/participle_texts.txt
 CONTENTTEXTS = E:/data/knowledge/corpora/fashion/debug/content/converted_texts.txt
