--- a/Article/FilteringArticle/knowledge_tree/file/configuration.ini
+++ b/Article/FilteringArticle/knowledge_tree/file/configuration.ini
@@ -58,3 +58,4 @@ WORDCLUSTER = E:/data/knowledge/topic_cluster/word_embedding_test
 TAGTREE = E:/data/knowledge/tag/tag_tree
 ARTICLETAG = E:/data/knowledge/tag/knowledge_tag
 SENTENCES = E:/data/knowledge/tag/knowledge_title_market
+UNTAGSENTENCE = E:/data/knowledge/tag/untag_sentences
