--- a/Article/FilteringArticle/knowledge_tree/file/configuration.ini
+++ b/Article/FilteringArticle/knowledge_tree/file/configuration.ini
@@ -8,11 +8,11 @@ WORD = E:/data/knowledge/qa/fashion/wordbag
 IDF = E:/data/knowledge/qa/fashion/idf
 
 [corpus]
-ARTICLE = E:/data/knowledge/pretreate/article
-SPLIT = E:/data/knowledge/pretreate/participle_title
-FEATURE = E:/data/knowledge/pretreate/treated_article
-SENTENCE = E:/data/knowledge/topic_cluster/json_sentence
-SUBTITLE = E:/data/knowledge/classify/fashion/sentences_sp_top
+ARTICLE = E:/data/knowledge/classify/web/article_trainset
+SPLIT = E:/data/knowledge/classify/web/article_participle
+SUBTITLE = E:/data/knowledge/classify/web/article_trainset_market
+FEATURE = E:/data/knowledge/classify/web/trainset_feature
+SENTENCE = E:/data/knowledge/classify/web/trainset_feature_market
 KEYWORD = E:/data/knowledge/qa/fashion/keyword_top
 SIMPLYARTICLE = E:/data/knowledge/classify/fashion/debug/title_simply_article
 UNIQUEARTICLE = E:/data/knowledge/qa/fashion/unique_article
@@ -46,7 +46,9 @@ POS = E:/data/knowledge/tools/postag
 REDUNDANCE = E:/data/knowledge/tools/content_redundance
 
 [classifier]
-CLASSIFIER = E:/data/knowledge/train/finance/classifier/classifier.m
+CLASSIFIER = E:/data/knowledge/train/web/classifier/classifier.m
+TRAINDATA = E:/data/knowledge/classify/web/trainset_feature_market
+TESTDATA = E:/data/knowledge/classify/web/testset_feature_market
 
 [cluster]
 TESTDATA = E:/data/knowledge/topic_cluster/topic_cluster
